# BigRedSky-APIs

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.celery  LICENSE  Makefile  PRD.md  README.md  docker-compose-langfuse.yaml  docker-compose.yml  main.py  pyproject.toml  rule.md  start.sh
alembic/: env.py
alembic/versions/: 04ed2e52cb9a_create_resume_summaries_table.py
app/: __init__.py
app/apis/: __init__.py
app/apis/monitor/: __init__.py  health.py  metrics.py  response.py  root.py
app/apis/v1/: __init__.py
app/apis/v1/contact/: controller.py  models.py  service.py
app/apis/v1/jd/: __init__.py  controller.py  models.py  service.py
app/apis/v1/ranking/: __init__.py  (+3 more)
app/constants/: constants.py  messages.py
app/core/: __init__.py  config.py  database.py  langfuse_handler.py  lifespan.py  logging_utils.py  server.py
app/core/cache/: __init__.py  cache.py
app/core/db/: __init__.py  base.py  session.py
app/core/exceptions/: __init__.py  base.py  handle_exception.py
app/core/middlewares/: __init__.py  logging.py  rate_limiter.py
app/core/responses/: __init__.py  json_response.py  stream_response.py
app/tasks/: celery_main.py
app/tasks/chat/: __init__.py  summary_task.py
app/tasks/ranking/: __init__.py  ranking_task.py
app/tasks/resume/: __init__.py  resume_task.py
docker/prometheus/: prometheus.yml
docker/promtail/: promtail-config.yml
docs/: cache.md  docker-compose.md  envs.md  example.env  langfuse.md  local_model_setup.md  logging.md  makefile.md  rate_limit.md  trace.md
tests/: test_chat.py  test_user.py
ui/: jd_creator.py
(+28 files in other folders)
