[project]
name = "fastapi-genai-boilerplate"
version = "0.0.1"
description = "A production-ready FastAPI boilerplate designed for building scalable, AI-powered applications."
authors = [
  { name = "Keval Dekivadiya", email = "kevalkumar.dekivadiya@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9,<4.0"

dependencies = [
  "fastapi>=0.115.12,<0.116.0",
  "uvicorn>=0.34.3,<0.35.0",
  "loguru>=0.7.3,<0.8.0",
  "pydantic-settings>=2.9.1,<3.0.0",
  "fastapi-utils>=0.8.0,<0.9.0",
  "typing-inspect>=0.9.0,<0.10.0",
  "email-validator==2.2.0",
  "gunicorn>=23.0.0,<24.0.0",
  "pytest>=8.4.0",
  "setuptools<81",
  "prometheus-fastapi-instrumentator>=7.1.0,<8.0.0",
  "aiocache>=0.12.3,<1.0.0",
  "httpx>=0.28.1,<0.29.0",
  "celery[redis]>=5.5.3",
  "duckduckgo-search>=8.0.4",
  "langchain-community>=0.3.26",
  "langgraph>=0.4.9",
  "langchain-tavily>=0.2.4",
  "fastapi-limiter>=0.1.6",
  "fakeredis[lua]>=2.30.1",
  "langchain-openai>=0.3.26",
  "langfuse>=3.0.8",
  "streamlit>=1.50.0",
  "requests>=2.32.4",
  "pymupdf>=1.26.5",
  "python-docx>=1.2.0",
  "gliner>=0.2.26",
  "qdrant-client>=1.16.1",
  "sentence-transformers>=5.1.2",
  "rank-bm25>=0.2.2",
  "asyncpg>=0.31.0",
  "sqlalchemy[asyncio]>=2.0.41",
  "alembic>=1.16.5",
  "aioboto3>=15.5.0",
  "beautifulsoup4>=4.14.3",
  "lxml>=5.4.0",
  "gliner>=0.2.26",
  "fastembed>=0.7.4",
]

[project.optional-dependencies]
dev = [
  "pre-commit>=4.2.0,<5.0.0",
  "black>=25.1.0,<26.0.0",
  "isort>=5.10.1,<6.0.0",
  "mypy>=1.16.0,<2.0.0",
  "ruff>=0.4.0,<1.0.0"
]
